Added button to test intent and assets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Word Counter</string>
+    <string name="frequency">Word Frequency:</string>
+    <string name="finishText">Finish</string>
 </resources>
